fixed custom logo settings overlaping with document logo

--- a/EmbedPress/Ends/Back/Settings/assets/css/style.css
+++ b/EmbedPress/Ends/Back/Settings/assets/css/style.css
@@ -2539,13 +2539,14 @@ button.button__instagram.hover__highlight:hover .icon {
 }
 
 .logo__adjust__wrap .logo__adjust .logo__adjust__preview .preview__box {
-    height: 280px;
     position: relative;
+    min-height: 300px;
 }
 
 .logo__adjust__wrap .logo__adjust .logo__adjust__preview .preview__box iframe {
     width: 100%;
     height: 100%;
+    min-height:300px;
 }
 
 .logo__adjust__wrap .logo__adjust .logo__adjust__preview .preview__box img {
